lustre/tests/conf-sanity.sh
@@ -7551,6 +7551,28 @@ test_107() {
 }
 run_test 107 "Unknown config param should not fail target mounting"
 
+test_122() {
+	[ $MDSCOUNT -lt 2 ] && skip "needs >= 2 MDTs" && return
+	[[ $(lustre_version_code ost1) -ge $(version_code 2.10.6) ]] ||
+		{ skip "Need OST version at least 2.10.6" && return 0; }
+
+
+	reformat
+	LOAD_MODULES_REMOTE=true load_modules
+#define OBD_FAIL_OFD_SET_OID 0x1e0
+	do_facet ost1 $LCTL set_param fail_loc=0x00001e0
+
+	setupall
+	$LFS mkdir -i1 -c1 $DIR/$tdir
+	$LFS setstripe -i0 -c1 $DIR/$tdir
+	do_facet ost1 $LCTL set_param fail_loc=0
+	createmany -o $DIR/$tdir/file_ 1000 ||
+		error "Fail to create a new sequence"
+
+	reformat
+}
+run_test 122 "Check OST sequence update"
+
 if ! combined_mgs_mds ; then
 	stop mgs
 fi
